Fixes image caption in the carousel, on mobile devices.

--- a/static/less/common/article.less
+++ b/static/less/common/article.less
@@ -90,6 +90,12 @@ article {
       display: block;
 	}	
   }
+  /* Fixes image caption in the carousel */
+  @media (max-width:767px){	
+    div.item[style]{
+      height: auto !important;
+    }
+  }
 }
 
 /* Old articles */
